Fixed spacing of winners

--- a/2020/assets/sass/main.css
+++ b/2020/assets/sass/main.css
@@ -1155,7 +1155,7 @@ h4 {
   width: 38%;
   float: left;
   margin: 0;
-  height: 25vh;
+  height: 300px;
 }
 
 .prizeLeft{
